Crashes when the imported sim from houdini starts. #80967

Closed
opened 2020-09-19 18:22:59 +02:00 by Onkar Domkawle · 12 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: 0330d1af29
Worked: (newest version of Blender that worked as expected)

Short description of error
I've imported a fluid sim from Houdini as an alembic file and it starts at frame 165. Every time the playhead or the timeline indicator reaches frame 145, blender crashes.
I've imported the alembic file into a fresh scene but still, the crash occurs.

Exact steps for others to reproduce the error
Open blender and import in the alembic file. (You can either use the provided blend file or start a fresh scene.)
V1.abc
MODELLING_THE_SCENE_V2_spidy_animated.blend
Either play the animation or scroll ahead of frame 165.
(sorry for the alembic file being soo big.)

Thank you so much!

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: `0330d1af29` Worked: (newest version of Blender that worked as expected) **Short description of error** I've imported a fluid sim from Houdini as an alembic file and it starts at frame 165. Every time the playhead or the timeline indicator reaches frame 145, blender crashes. I've imported the alembic file into a fresh scene but still, the crash occurs. **Exact steps for others to reproduce the error** Open blender and import in the alembic file. (You can either use the provided blend file or start a fresh scene.) [V1.abc](https://archive.blender.org/developer/F8899674/V1.abc) [MODELLING_THE_SCENE_V2_spidy_animated.blend](https://archive.blender.org/developer/F8899935/MODELLING_THE_SCENE_V2_spidy_animated.blend) Either play the animation or scroll ahead of frame 165. (sorry for the alembic file being soo big.) Thank you so much!
Author

Added subscriber: @theinfinites

Added subscriber: @theinfinites

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the crash.
It occurred while I was viewing the animation.

>	blender.exe!blender::io::alembic::copy_zup_from_yup(float * zup, const float * yup) Line 40	C++

 	blender.exe!blender::io::alembic::process_loop_normals(blender::io::alembic::CDStreamConfig & config, const boost::shared_ptr<Alembic::Abc::v12::TypedArraySample<Alembic::Abc::v12::N3fTPTraits>> loop_normals_ptr) Line 283	C++
 	blender.exe!blender::io::alembic::process_normals(blender::io::alembic::CDStreamConfig & config, const Alembic::AbcGeom::v12::ITypedGeomParam<Alembic::Abc::v12::N3fTPTraits> & normals, const Alembic::Abc::v12::ISampleSelector & selector) Line 332	C++
 	blender.exe!blender::io::alembic::read_mesh_sample(const std::string & iobject_full_name, blender::io::alembic::ImportSettings * settings, const Alembic::AbcGeom::v12::IPolyMeshSchema & schema, const Alembic::Abc::v12::ISampleSelector & selector, blender::io::alembic::CDStreamConfig & config) Line 443	C++
 	blender.exe!blender::io::alembic::AbcMeshReader::read_mesh(Mesh * existing_mesh, const Alembic::Abc::v12::ISampleSelector & sample_sel, int read_flag, const char * * err_str) Line 646	C++
 	blender.exe!ABC_read_mesh(CacheReader * reader, Object * ob, Mesh * existing_mesh, const float time, const char * * err_str, int read_flag) Line 798	C++
 	blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 167	C
 	blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, int useDeform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final) Line 1183	C
 	blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1801	C
 	blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1922	C
 	blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 194	C
 	blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 385	C
 	[External Code]	
 	blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128	C++
 	[External Code]	
 	blender.exe!tbb::interface7::internal::isolate_impl<void,void <lambda>(void) const>(const Task::()::__l2::void <lambda>(void) & f) Line 160	C++
 	blender.exe!Task::operator()() Line 122	C++
 	blender.exe!tbb::internal::function_task<Task>::execute() Line 1049	C++
 	[External Code]	
 	blender.exe!tbb::internal::task_group_base::wait() Line 168	C++
 	blender.exe!blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) Line 399	C++
 	blender.exe!BKE_scene_graph_update_for_newframe(Depsgraph * depsgraph) Line 1603	C
 	blender.exe!screen_animation_step(bContext * C, wmOperator * UNUSED_op, const wmEvent * event) Line 4590	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1304	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2132	C
 	blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2442	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2739	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2869	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3402	C
 	blender.exe!WM_main(bContext * C) Line 485	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 535	C
 	[External Code]	
I can confirm the crash. It occurred while I was viewing the animation. ```lines > blender.exe!blender::io::alembic::copy_zup_from_yup(float * zup, const float * yup) Line 40 C++ blender.exe!blender::io::alembic::process_loop_normals(blender::io::alembic::CDStreamConfig & config, const boost::shared_ptr<Alembic::Abc::v12::TypedArraySample<Alembic::Abc::v12::N3fTPTraits>> loop_normals_ptr) Line 283 C++ blender.exe!blender::io::alembic::process_normals(blender::io::alembic::CDStreamConfig & config, const Alembic::AbcGeom::v12::ITypedGeomParam<Alembic::Abc::v12::N3fTPTraits> & normals, const Alembic::Abc::v12::ISampleSelector & selector) Line 332 C++ blender.exe!blender::io::alembic::read_mesh_sample(const std::string & iobject_full_name, blender::io::alembic::ImportSettings * settings, const Alembic::AbcGeom::v12::IPolyMeshSchema & schema, const Alembic::Abc::v12::ISampleSelector & selector, blender::io::alembic::CDStreamConfig & config) Line 443 C++ blender.exe!blender::io::alembic::AbcMeshReader::read_mesh(Mesh * existing_mesh, const Alembic::Abc::v12::ISampleSelector & sample_sel, int read_flag, const char * * err_str) Line 646 C++ blender.exe!ABC_read_mesh(CacheReader * reader, Object * ob, Mesh * existing_mesh, const float time, const char * * err_str, int read_flag) Line 798 C++ blender.exe!modifyMesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 167 C blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, int useDeform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final) Line 1183 C blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1801 C blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 1922 C blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 194 C blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 385 C [External Code] blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128 C++ [External Code] blender.exe!tbb::interface7::internal::isolate_impl<void,void <lambda>(void) const>(const Task::()::__l2::void <lambda>(void) & f) Line 160 C++ blender.exe!Task::operator()() Line 122 C++ blender.exe!tbb::internal::function_task<Task>::execute() Line 1049 C++ [External Code] blender.exe!tbb::internal::task_group_base::wait() Line 168 C++ blender.exe!blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) Line 399 C++ blender.exe!BKE_scene_graph_update_for_newframe(Depsgraph * depsgraph) Line 1603 C blender.exe!screen_animation_step(bContext * C, wmOperator * UNUSED_op, const wmEvent * event) Line 4590 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1304 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2132 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2442 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2739 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2869 C blender.exe!wm_event_do_handlers(bContext * C) Line 3402 C blender.exe!WM_main(bContext * C) Line 485 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 535 C [External Code] ```
Sybren A. Stüvel self-assigned this 2020-09-28 12:44:57 +02:00

The Alembic file has invalid data. At the start, the mesh has 66858 loops and the same number of loop normals. However, when the fluid simulation begins, the mesh has many more loops (the topology is changing per frame, which is quite normal for a simulation result) but the number of loop normals remains at 66858.

I can't fix the Houdini exporter, but I can make Blender not crash on this file.

The Alembic file has invalid data. At the start, the mesh has 66858 loops and the same number of loop normals. However, when the fluid simulation begins, the mesh has many more loops (the topology is changing per frame, which is quite normal for a simulation result) but the number of loop normals remains at 66858. I can't fix the Houdini exporter, but I can make Blender not crash on this file.

This issue was referenced by 3158fc2593

This issue was referenced by 3158fc2593e1afc29280187d9e427a6c21a8f37f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Thank you so much for this.
I also found a fix but that requires C4D. I imported the Alembic file in C4D and then exported it again as an Alembic. Imported that in Blender and it works.

Thank you so much for this. I also found a fix but that requires C4D. I imported the Alembic file in C4D and then exported it again as an Alembic. Imported that in Blender and it works.

That probably means that C4D either doesn't write normals at all, or writes them correctly. In any case, I prefer Blender to not crash anyway ;-)

That probably means that C4D either doesn't write normals at all, or writes them correctly. In any case, I prefer Blender to not crash anyway ;-)
Author

Yup, that's the dream : )

Yup, that's the dream : )

Try the daily build, it shouldn't crash any more. https://builder.blender.org/download/

Try the daily build, it shouldn't crash any more. https://builder.blender.org/download/
Author

yes sir!

yes sir!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80967
No description provided.